--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
         <div class="reward - container">
             <h1>如果您觉得这个网站有对你产生帮助，请支持一下吧！</h1>
-            <img src="http://abc.cmzprep.top/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
+            <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
         </div>
     </div>
     <p style="text - align: center; margin - top: 20px;">制作人员：陈伊俊</p>
