--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <p style="text - align: center; margin - top: 20px;">制作人员：陈伊俊</p>
-    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、FoskfD(QQ名，QQ号：3828638473)、GitHub所有团队、豆包所有团队</p>
+    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、FoskfD(QQ名，QQ号：3828638473)、GitHub所有团队</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
 </body>
