--- a/index.html
+++ b/index.html
@@ -123,5 +123,21 @@
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
 </body>
+<script>
+    // 检查本地存储中是否存在访问计数
+    if (localStorage.getItem('visitCount')) {
+        // 如果存在，获取当前计数并加1
+        var count = parseInt(localStorage.getItem('visitCount')) + 1;
+        localStorage.setItem('visitCount', count);
+    } else {
+        // 如果不存在，初始化为1
+        localStorage.setItem('visitCount', 1);
+    }
+    // 在页面上显示访问计数
+    var visitCountElement = document.createElement('p');
+    visitCountElement.textContent = '本网站访问次数：' + localStorage.getItem('visitCount');
+    document.body.appendChild(visitCountElement);
+</script>
+</body>
 
 </html>
