--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>下载网站</title>
-    <link rel = "icon" href = "c:\Users\陈伊俊\Desktop\picture\bitbug_favicon.ico" type = "image/x-icon">
+    <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
