--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
             <p>软件描述：实用工具箱提供了从日常、图片、查询、设备、提取、趣味等多方面的功能，操作简单，即点即用，避免您下载超多应用的难题，且应用体积轻巧，界面简洁</p>
             <a href="https://www.123865.com/s/Qqhgjv-C4pw3?" download>点击下载</a>
         </div>
+
+         <div>
+            <h3>AZ Screen Recorder</h3>
+            <p>软件描述：这是一个录屏软件，这个录屏软件以其他录屏软件不一样，AZ Screen Recorder录屏时不掉帧</p>
+            <a href="https://www.123865.com/s/Qqhgjv-Gapw3?" download>点击下载</a>
+        </div>
+         <div>
+            <h3>GitHub App</h3>
+            <p>软件描述：GitHub 是一个广泛使用的源代码管理工具和协作平台，特别适用于团队项目的开发和管理</p>
+            <a href="https://www.123865.com/S/Qhgjv-Xapw3" download>点击下载</a>
+        </div>
 </body>
 
 </body>
