--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
          <div>
             <h3>GitHub App</h3>
             <p>软件描述：GitHub 是一个广泛使用的源代码管理工具和协作平台，特别适用于团队项目的开发和管理</p>
-            <a href="https://www.123865.com/S/Qhgjv-Xapw3" download>点击下载</a>
+            <a href="https://www.123865.com/s/Qqhgjv-napw3?" download>点击下载</a>
         </div>
 </body>
 
