--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>下载网站</title>
+    <title>㍿の下载网站</title>
     <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
     <style>
         body {
@@ -52,7 +52,7 @@
 
 
 <body>
-    <h1>欢迎来到㍿的下载网站</h1>
+    <h1>欢迎来到㍿の下载网站</h1>
     <h2>Windows电脑软件(提取码一律都是AMNS)</h2>
     <div class="download-container">
         <div>
