--- a/index.html
+++ b/index.html
@@ -53,74 +53,74 @@
 
 <body>
     <h1>欢迎来到㍿の下载网站</h1>
-    <h2>Windows电脑软件(提取码一律都是AMNS)</h2>
+    <h2>Windows电脑软件</h2>
     <div class="download-container">
         <div>
             <h3>Geek Uninstaller</h3>
             <p>软件描述：一款强大的卸载工具，可以将残留文件扫描出来，且将删除</p>
-            <a href="https://www.123865.com/s/Qqhgjv-P4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-76.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-1006/ef789974/1796718-0/ef78997488e6121971404a3f25686fee/c-m2?v=5&t=1728188422&s=17281884222a546245bbefdd4c3da74655d7002c6c&r=E9UCBB&bzc=1&bzs=1823228118&filename=geek.exe&x-mf-biz-cid=24c96ba1-0b2b-4032-8d50-fd2784b362fe-6eaa77&auto_redirect=0&cache_type=1&xmfcid=541ceaa9-54b6-423c-98f1-914d39a7778b-1-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>Bongo Cat Mver（有皮肤）</h3>
             <p>软件描述：Bongo Cat Mver是一款界面非常Q萌的鼠标键盘替身演示工具。Bongo Cat Mver适用于各种各种主播用户，用户只需要将这个小猫敲键盘的动画放置在电脑窗口上的任何位置，即可将用户所做出的各种键盘鼠标操作实时显示在卡通形象上。Bongo Cat Mver还支持很多动作表情的自定义</p>
-            <a href="https://www.123865.com/s/Qqhgjv-X4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-70.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-162/f5b11a44/1823228118-0/f5b11a44c7b4b7896554862d249eb0a2/c-m56?v=5&t=1728188382&s=17281883823a949488c84b4661123597fb68f8b881&r=WD6G0D&bzc=1&bzs=1823228118&filename=%E5%B0%8F%E9%BB%91%E9%94%AE%E7%9B%98%E7%8C%AB.zip&x-mf-biz-cid=53a74611-190f-44e7-8d53-35600ebeeded-c4937c&auto_redirect=0&cache_type=1&xmfcid=66e353b5-8281-4077-9d65-5160f2e92adc-0-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>Bongo Cat Mver（无皮肤）</h3>
             <p>软件描述：Bongo Cat Mver是一款界面非常Q萌的鼠标键盘替身演示工具。Bongo Cat Mver适用于各种各种主播用户，用户只需要将这个小猫敲键盘的动画放置在电脑窗口上的任何位置，即可将用户所做出的各种键盘鼠标操作实时显示在卡通形象上。Bongo Cat Mver还支持很多动作表情的自定义</p>
-            <a href="https://www.123865.com/s/Qqhgjv-n4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-72.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-387/402b35a8/1823228118-0/402b35a820d1b5cec03b57b805407583/c-m52?v=5&t=1728188355&s=172818835585e76f48721f8a4eb1fa6ef86896323b&r=G1BRWR&bzc=1&bzs=1823228118&filename=BongoCatMverL~0.1.6.zip&x-mf-biz-cid=873b45f5-3f48-41ed-9695-10afadcbdef3-c4937c&auto_redirect=0&cache_type=1&xmfcid=7dee7924-70c5-43f6-bd41-61adab13a28a-0-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>steam++</h3>
             <p>软件描述：Steam++（Steam社区工具箱）官方正式版是一款很棒的steam游戏平台的辅助工具，Steam++不仅支持快速切换登录账号，能够在不同平台上相互同步使用</p>
-            <a href="https://www.123865.com/s/Qqhgjv-24pw3?" download>点击下载</a>
+            <a href="https://183-255-110-74.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-751/9173c4c9/1818302281-0/9173c4c94997cd087bde47acc83e3eef/c-m48?v=5&t=1728188330&s=1728188330ac1bb342aa3c4ac8fbad7eb5f7603241&r=FLL059&bzc=1&bzs=1823228118&filename=steam%2B%2B.exe&x-mf-biz-cid=9609261c-75df-4ac0-bbcf-3d70dc387df1-584000&auto_redirect=0&cache_type=1&xmfcid=96a3fd3b-5bbe-4d7c-9de6-cdd1bd13dea9-1-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>Bandicam(不掉帧)</h3>
             <p>软件描述：Bandicam是一款高压缩率的视频录制软件，提供多种视频录制模式，是游戏录制，屏幕录像教程，摄像头录制的好工具。且Bandicam在录制时自动压缩视频，因此，录制的文件远小于其它软件</p>
-            <a href="https://www.123865.com/s/Qqhgjv-W4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-70.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-847/c6877921/1823228118-0/c687792132f154b54a1f760a5034634f/c-m17?v=5&t=1728188296&s=1728188296bdd7f2d28465dddacca484778fb89cdc&r=KV0606&bzc=1&bzs=1823228118&filename=bandicam%EF%BC%88%E5%85%8D%E8%B4%B9%E5%BD%95%E5%B1%8F%E4%B8%8D%E6%8E%89%E5%B8%A7%E3%80%81%E4%B8%8D%E5%8D%A1%E9%A1%BF%E3%80%81%E8%87%AA%E5%B8%A6VIP%EF%BC%89.zip&x-mf-biz-cid=6f939286-0521-45d0-9ea6-8afa3bdc5781-584000&auto_redirect=0&cache_type=1&xmfcid=8636d10c-9d14-45ef-a5c3-dbc47159281c-1-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>植物大战僵尸杂交版v2.3</h3>
             <p>软件描述：植物大战僵尸杂交版(pvzHE)又称“Plants Vs Zombies Hybridize Edition”，植物大战僵尸杂交版（潜艇伟伟迷-改版）等，让你不知道你种下去的植物将会出现什么样的结果，有可能会出现让你崩溃的僵尸，就像是随机植物那样，将会随机的出现一个植物或者是僵尸，给你的游戏对决带来不确定的因素，让你在这里直面僵尸带来的危险，保护自己的大脑不被吃掉</p>
-            <a href="https://www.123865.com/s/Qqhgjv-N4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-78.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-949/c4971c96/1823228118-0/c4971c96d69cdd05d432d3feeafdb7b5/c-m55?v=5&t=1728188275&s=172818827540ae6fdb110ffe96099d94d981e27a58&r=H8EC52&bzc=1&bzs=1823228118&filename=%E6%A4%8D%E7%89%A9%E5%A4%A7%E6%88%98%E5%83%B5%E5%B0%B8%E6%9D%82%E4%BA%A4%E7%89%88v2.3.zip&x-mf-biz-cid=76dbce60-766b-4f1b-96da-f7c444549349-c4937c&auto_redirect=0&cache_type=1&xmfcid=06981e41-1837-46ee-a502-7570d9f82968-1-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>Skinseed</h3>
             <p>软件描述：kinseed也叫做我的世界皮肤编辑器，是一款专门为我的世界游戏打造的游戏辅助工具，该软件强大的多功能皮肤工具，能够让你轻松管理mc的皮肤。通过它你可以随心所欲的编辑喜欢的皮肤，自由的进行调色，将他们制造成自己喜欢的外观。比如将你的史蒂夫变成蜘蛛侠或者钢铁侠，当然如果你是二次元爱好者的话更是可以通过制作使用各种超萌超可爱的二次元少女形象皮肤，让你的角色变得与众不同。不仅如此，目前Skinseed还为大家提供了6个方向的视图：正视图、后视图、左视图、右视图、 顶视图、底部视图，方便大家从各个方向进行编辑，同时支持配色自定义修改和皮肤本地保存，也可以保存到相册后进行发表。另外值得一提的是软件还有着强大图片载入功能，能使你导入你喜欢的图片，经过算法分析就会生成出相类似的照片皮肤</p>
-            <a href="https://www.123865.com/s/Qqhgjv-l4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-78.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-664/b7e73c9a/1823228118-0/b7e73c9a3d97529905125fd54e606698/c-m56?v=5&t=1728188239&s=172818823970dc4015bd20177aeb350bd1cee9caba&r=Y0CB5A&bzc=1&bzs=1823228118&filename=MC%E7%9A%AE%E8%82%A4%E7%BC%96%E8%BE%91%E5%99%A8.zip&x-mf-biz-cid=b1e19ff7-500f-43ff-b43c-0f196d191586-584000&auto_redirect=0&cache_type=1&xmfcid=5c34e3bf-ab2b-4115-adfd-182505583a01-1-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>GitHub汉化工具</h3>
             <p>软件描述：GitHub汉化工具是一款为使用桌面版GitHub用全英文而不懂中文的同学，可以下载这个汉化工具，它可以将GitHub的界面和功能翻译成中文，让你更方便的使用GitHub</p>
-            <a href="https://www.123865.com/s/Qqhgjv-xxpw3?" download>点击下载</a>
+            <a href="https://183-255-110-68.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-840/5d02683f/1823228118-0/5d02683f41461d7911c406e3aedf9348/c-m56?v=5&t=1728188211&s=1728188211cb9b219d8d9cef67b9c9cfdc8ffb1501&r=EKFZAC&bzc=1&bzs=1823228118&filename=Github%E6%B1%89%E5%8C%96%E5%B7%A5%E5%85%B7.zip&x-mf-biz-cid=48c16831-a876-4029-944f-f38e1ea316ec-6eaa77&auto_redirect=0&cache_type=1&xmfcid=e8f405f9-7f29-4b1f-8bd1-96be9c24ae7e-0-50111d3b1" download>点击下载</a>
         </div>
         <div>
             <h3>删除Windows defender工具</h3>
             <p>软件描述：windows defender是微软公司推出的杀毒软件，它可以帮助你保护你的电脑不被恶意软件侵害，但它也会带来一些问题，比如你下载了一个软件，windows defender会莫名其妙的将其删除，这时你就无法使用软件，这时就需要删除windows defender工具来解决这个问题</p>
-            <a href="https://www.123pan.com/s/Qqhgjv-pxpw3" download>点击下载</a>
+            <a href="https://183-255-110-77.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-254/df4fabcf/1823228118-0/df4fabcf671365c1d23204a0c19d70fe/c-m56?v=5&t=1728188186&s=172818818609ba65fd97730e7b633f638ebe9c54c5&r=C7RCYF&bzc=1&bzs=1823228118&filename=%E5%88%A0%E9%99%A4Windows+defender%E5%B7%A5%E5%85%B7.zip&x-mf-biz-cid=59d3d0b4-e1f1-488a-8639-cdf27a180358-c4937c&auto_redirect=0&cache_type=1&xmfcid=c85d9174-d887-4658-9639-2ec31a83eacc-0-50111d3b1" download>点击下载</a>
         </div>
 </body>
 
 </body>
     </div>
-    <h2>Android手机软件(提取码一律都是AMNS)</h2>
+    <h2>Android手机软件</h2>
     <div class="download-container">
         <div>
             <h3>实用工具箱</h3>
             <p>软件描述：实用工具箱提供了从日常、图片、查询、设备、提取、趣味等多方面的功能，操作简单，即点即用，避免您下载超多应用的难题，且应用体积轻巧，界面简洁</p>
-            <a href="https://www.123865.com/s/Qqhgjv-C4pw3?" download>点击下载</a>
+            <a href="https://183-255-110-79.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-642/19a87a6f/1831415993-0/19a87a6fbb2b9bc8debeca43c2f19282/c-m34?v=5&t=1728188154&s=1728188154f162972c11b95e2fe88b1c09ba80ea48&r=GPOCQB&bzc=1&bzs=1823228118&filename=%E5%AE%9E%E7%94%A8%E5%B7%A5%E5%85%B7%E7%AE%B1_11.4_1727102130.apk&x-mf-biz-cid=e8cd0ddb-ccaf-4366-98fe-80df6db15912-584000&auto_redirect=0&cache_type=1&xmfcid=f37a0052-283f-4777-85db-9df110fb3808-0-50111d3b1" download>点击下载</a>
         </div>
 
          <div>
             <h3>AZ Screen Recorder</h3>
             <p>软件描述：这是一个录屏软件，这个录屏软件以其他录屏软件不一样，AZ Screen Recorder录屏时不掉帧</p>
-            <a href="https://www.123865.com/s/Qqhgjv-Gapw3?" download>点击下载</a>
+            <a href="https://183-255-110-69.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-591/39c5bfbc/1812205467-0/39c5bfbc7d49216614e4ca06db11f24f/c-m2?v=5&t=1728188132&s=1728188132a36f1835ac99f7cca23562b1a3f9c0c0&r=GEWGLQ&bzc=1&bzs=1823228118&filename=%E6%BB%A1%E5%B8%A7%E5%BD%95%E5%B1%8F%E8%BD%AF%E4%BB%B6%EF%BC%88%E5%BD%95%E5%B1%8F%E4%B8%8D%E5%8D%A1%E9%A1%BF%EF%BC%89.apk&x-mf-biz-cid=42f540a6-90fc-4cd0-a31d-d07851e1f219-584000&auto_redirect=0&cache_type=1&xmfcid=237c9142-cd2a-4630-b8eb-d8bf5dde3de7-1-50111d3b1" download>点击下载</a>
         </div>
          <div>
             <h3>GitHub App</h3>
             <p>软件描述：GitHub 是一个广泛使用的源代码管理工具和协作平台，特别适用于团队项目的开发和管理</p>
-            <a href="https://www.123865.com/s/Qqhgjv-napw3?" download>点击下载</a>
+            <a href="https://183-255-110-69.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-493/a3bf5673/1823450955-0/a3bf5673ecd3c2d6a966c33f6d0e4ded/c-m34?v=5&t=1728188060&s=17281880608f9f0e2899f1d1f095435baa7e0fb9d9&r=T40AGU&bzc=1&bzs=1823228118&filename=GitHub_1.158.0.apk&x-mf-biz-cid=a438fe9f-5bc3-49f4-abdb-7fc6378b2e47-6eaa77&auto_redirect=0&cache_type=1&xmfcid=b82af2ac-6052-4c60-8b73-1b0d363959de-1-50111d3b1" download>点击下载</a>
         </div>
 </body>
 
@@ -131,7 +131,7 @@
             <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
         </div>
     </div>
-    <p style="text - align: center; margin - top: 20px;">制作人员：陈伊俊</p>
+    <p style="text - align: center; margin - top: 20px;">制作人员：陈伊俊（QQ:2501113185）</p>
     <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、FoskfD(QQ名，QQ号：3828638473)、GitHub所有团队</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
