--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <body>
     <h1>欢迎来到㍿の下载网站</h1>
+    <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员</p>
     <h2>Windows电脑软件</h2>
     <div class="download-container">
         <div>
@@ -136,7 +137,7 @@
             <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
         </div>
     </div>
-    <p style="text - align: center; margin - top: 20px;">制作人员：陈伊俊（QQ:2501113185）</p>
+    <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ:2501113185）</p>
     <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、FoskfD(QQ名，QQ号：3828638473)、GitHub所有团队</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
