--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 </head>
 
 
+<body background="c:\Users\陈伊俊\Desktop\picture\芯片动能.png"
+    style="background-repeat:no-repeat
+    background-size:100% 100%; ">
+</body>
+
+
 <body>
     <h1>欢迎来到㍿の下载网站</h1>
     <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员</p>
