--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 
 
-<body background="/芯片动能.png"
+<body background="/精简.png"
     style="background-repeat:no-repeat
     background-size:100% 100%; ">
 </body>
