--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 </head>
 
 
-<body background="/精简.png"
+<body background="/芯片动能.png"
     style="background-repeat:no-repeat
+    background-attachment:fixed;
     background-size:100% 100%; ">
 </body>
 
