--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 
 
-<body background="/芯片动能.png"
+<body background="/index background.png"
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
