--- a/xdfboom.html
+++ b/xdfboom.html
@@ -1,19 +1,21 @@
+<html>
 <head>
+
     <title>XDFBoom下载站debug版</title>
-    <h1 style="text-align:center;color:blue">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
-    <h3 style="text-align:center;">当前版本：1.0 debug</h3>
-    <h4 style="text-align:center;color:blue">新下载站地址：www.xdfboomdl.top  不要记错啦！</h4>
-    <p style="text-align: center; color: blueviolet;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
     <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
 </head>
 
-<body background="/2CEF0293B9E192CEEA0B5E1FBC689E6F.png" 
+<body background="/2CEF0293B9E192CEEA0B5E1FBC689E6F.png"
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
 </body>
 
 <body>
+    <h1 style="text-align:center;color:blue">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
+    <h3 style="text-align:center;">当前版本：1.0 ebug</h3>
+    <h4 style="text-align:center;color:blue">新下载站地址：https://abc.cmzprep.top/xdfboom.html 不要记错啦！</h4>
+    <p style="text-align: center; color: blueviolet;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
     <h2 style="color:blue">XDF-N1刷机工具（下载不了可联系作者：2139748337）</h2>
     <br>
     <body>
@@ -39,3 +41,4 @@
 
 </body>
 <h2 style="color:blueviolet">目前网站还未搭建好，我先把重要的文件发出来，供大家下载使用，后期再做调整，求支持！</h2>
+</html>
