--- a/xdfboom.html
+++ b/xdfboom.html
@@ -1,6 +1,5 @@
-<html>
+<!DOCTYPE html>
 <head>
-
     <title>XDFBoom下载站debug版</title>
     <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
 </head>
