--- a/xdfboom.html
+++ b/xdfboom.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <head>
     <title>XDFBoom下载站debug版</title>
     <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
