--- a/xdfboom.html
+++ b/xdfboom.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1 style="text-align:center;color:blue">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
-    <h3 style="text-align:center;">当前版本：1.0 ebug</h3>
+    <h3 style="text-align:center;">当前版本：1.0 Debug</h3>
     <h4 style="text-align:center;color:blue">新下载站地址：https://abc.cmzprep.top/xdfboom.html 不要记错啦！</h4>
     <p style="text-align: center; color: blueviolet;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
     <h2 style="color:blue">XDF-N1刷机工具（下载不了可联系作者：2139748337）</h2>
