--- a/xdfboom.html
+++ b/xdfboom.html
@@ -5,20 +5,11 @@
     <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
 </head>
 
-
-
-
-        <head>
-            <title>XDFBoom下载站debug版</title>
-            <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
-        </head>
-        
-        <body background="/2CEF0293B9E192CEEA0B5E1FBC689E6F.png"
-            style="background-repeat:no-repeat
-            background-attachment:fixed;
-            background-size:100% 100%; ">
-        </body>
-        
+<body background="/2CEF0293B9E192CEEA0B5E1FBC689E6F.png"
+    style="background-repeat:no-repeat
+    background-attachment:fixed;
+    background-size:100% 100%; ">
+</body
         <body>
             <h1 style="text-align:center;color:blue">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
             <h3 style="text-align:center;">当前版本：1.0 Debug</h3>
