--- a/xdfboom.html
+++ b/xdfboom.html
@@ -5,7 +5,7 @@
     <link rel = "icon" href = "/tubiao.ico" type = "image/x-icon">
 </head>
 
-<body background="/2CEF0293B9E192CEEA0B5E1FBC689E6F.png"
+<body background="/xdfboom_background.png"
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
