--- a/xdfboom.html
+++ b/xdfboom.html
@@ -9,7 +9,7 @@
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
-</body
+</body>
         <body>
             <h1 style="text-align:center;color:blue">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
             <h3 style="text-align:center;">当前版本：1.0 Debug</h3>
