--- a/xdfboom.html
+++ b/xdfboom.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 
-<body background="精简.png" 
+<body background="xdfboom_ background.png" 
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
