--- a/xdfboom.html
+++ b/xdfboom.html
@@ -90,7 +90,7 @@
     <br>
     <h2>如果觉得对您有用，就打赏一点吧！您的支持是我创作的动力！</h2>
     <br>
-    <img src="屏幕截图 2024-10-06 103448.png" alt="收款码">
+    <img src="/69A8B51E56ED1D9EE96C5CD60FBC2689.png" alt="微信打赏二维码" width="300" height="400">
 </body>
 <br>
 <body>
@@ -98,14 +98,4 @@
     <p style="color: darkorchid">技术支持：GitHub & openfrp 宣传支持：CSDN博客 对赞助及支持者鸣谢！</p>
 </body>
 
-<script>
-    if (localStorage.getItem('visitCount')) {
-        var count = parseInt(localStorage.getItem('visitCount')) + 1;
-        localStorage.setItem('visitCount', count);
-    } else {
-        localStorage.setItem('visitCount', 1);
-    }
-    var visitCountElement = document.createElement('p');
-    visitCountElement.textContent = '本网站个人访问次数：' + localStorage.getItem('visitCount');
-    document.body.appendChild(visitCountElement);
-</script>
+</html>
