--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
 </body>
-
+    
+<div class="download-container">
 <div class="github - badge - big">
     <span class="badge - subject"><i class="fa fa - clock - o"></i> 🕒本站已正常运行 </span>
     <span class="badge - value bg - apricots">
