--- a/xdfboom.html
+++ b/xdfboom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>XDFBoom下载站debug版</title>
-    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
+    <h1 style="text-align:center">欢迎来到(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄のXDFBoom新下载站</h1>
     <h3 style="text-align:center;">当前版本：V1.0 ©️XDFBoom Team | (̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
     <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/xdfboom.html  不要记错啦！</h4>
     <p style="text-align: center; color: red;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
@@ -94,7 +94,7 @@
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件：XDFBoom团队</p>
+    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站制作辅助人员：㍿ 下载站文件：XDFBoom团队</p>
     <p style="color: darkorchid">技术支持：GitHub & openfrp 宣传支持：CSDN博客 对赞助及支持者鸣谢！</p>
 </body>
 <script>
