--- a/xdfboom.html
+++ b/xdfboom.html
@@ -6,7 +6,7 @@
     <h3 style="text-align:center;">当前版本：V1.0 ©️XDFBoom Team | (̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
     <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/xdfboom.html  不要记错啦！</h4>
     <p style="text-align: center; color: red;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
-    <link rel = "icon" href = "D:\桌面\图标.ico" type = "image/x-icon">
+    <link rel = "icon" href = "/tuobiao.ico" type = "image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
