--- a/xdfboom.html
+++ b/xdfboom.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>XDFBoom下载站debug版</title>
-    <h1 style="text-align:center">欢迎来到(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄のXDFBoom新下载站</h1>
+    <title>XDFBoom下载站</title>
+    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
     <h3 style="text-align:center;">当前版本：V1.0 ©️XDFBoom Team | (̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
     <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/xdfboom.html  不要记错啦！</h4>
     <p style="text-align: center; color: red;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
-    <link rel = "icon" href = "/tuobiao.ico" type = "image/x-icon">
+    <link rel = "icon" href = "tubiao.ico" type = "image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,55 +58,84 @@
 </body>
 
 <body>
-    <h2>XDF-N1刷机工具（下载不了可联系作者：2139748337）</h2>
+    <h2>XDF-N1刷机工具（提取码：npad）</h2>
     <br>
     <div class="download-container">
     <body>
         <h3>1.MTK_Client(gui版) </h3>
         <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，使用图形化操作，学习机关机后按住三个键，连上电脑即可。可对学习机进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
-        <a href="https://1-180-25-9.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-17/326c88cb/1816520024-0/326c88cb6b6d185dc760f39722bc7411/c-m30?v=5&t=1728185429&s=172818542980557bf74a406ed86c49dbef0717477b&r=YP15VY&bzc=2&bzs=313833383432343633303a37303738333831373a36383036383934363a30&filename=MTK_Client+.exe&x-mf-biz-cid=bd6751aa-b666-44a6-81ac-67a8e2508d1d-584000&auto_redirect=0&cache_type=1&xmfcid=cbeef831-2e2c-4e1c-96cd-15dfcb912f99-0-50111d3b1">点击下载</a>
+        <a href="https://www.123pan.com/s/k4tFTd-XATZh?">点击下载</a>
     </body>
     <body>
         <h3>2.MTK_Client(非gui版)</h3>
         <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，使用代码操作，学习机关机后按住三个键，连上电脑即可。可对学习机进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
-        <a href="https://1-180-25-135.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-796/3db8b2f1/1838424630-0/3db8b2f177760d7751681a41d122cf1c/c-m52?v=5&t=1728186788&s=1728186788f3951935d94c2e5f20409f10899315f6&r=EE2K4G&bzc=2&bzs=313833383432343633303a37303738333831383a353935373838333a30&filename=mtk_c.7z&x-mf-biz-cid=35c34ff7-1c21-428c-a1ed-cd421d6bfdc2-6eaa77&auto_redirect=0&cache_type=1&xmfcid=2ec52ad0-dc9b-4f28-b8f1-00631813d402-0-50111d3b1">点击下载</a>
+        <a href="https://www.123pan.com/s/k4tFTd-nATZh?">点击下载</a>
     </body>
     <body>
         <h3>3.adb和fastboot</h3>
         <p>简介：adb即安卓设备调试桥，fastboot即安卓快速启动，可对设备进行多种操作，如shell指令、flash刷机、oem解锁等，让刷机更加方便！</p>
-        <a href="https://36-102-218-145.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-269/568c3c15/1838424630-0/568c3c15fc20eb35863035473683490d/c-m23?v=5&t=1728187339&s=1728187339f06eea444cee419d33b894420479e726&r=4LCGC3&bzc=2&bzs=313833383432343633303a37303738333832313a333531313034383a30&filename=ADB.7z&x-mf-biz-cid=84693d08-39c7-4b02-bfe0-1e51a671ab86-3dab77&auto_redirect=0&cache_type=1&xmfcid=62a27d5c-43da-48f6-86d4-445f8ec320da-0-50111d3b1">点击下载</a>
+        <a href="https://www.123pan.com/s/k4tFTd-WATZh?">点击下载</a>
     </body>
     <body>
         <h3>4.Scrcpy(gui版)</h3>
         <p>简介：Scrcpy是一个可以在电脑上查看和控制学习机的实用软件，设备打开USB调试连接即可，比无线的延时率要低很多，方便自己或他人调试学习机！</p>
-        <a href="https://1-180-25-135.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-161/38618c93/1812538188-0/38618c93364336c27b97316787fb54a1/c-m31?v=5&t=1728190455&s=1728190455f6643af371e6d27d52c52975bd302b74&r=6H4GTH&bzc=2&bzs=313833383432343633303a37303738333832343a3536353234383a30&filename=Scrcpy_GUI_byCZ_V3.1.0.exe&x-mf-biz-cid=e038793a-78f7-48c2-b050-886053e0f483-584000&auto_redirect=0&cache_type=1&xmfcid=34a5e73a-7f52-4936-bdfb-ae45ce2eb1b4-0-50111d3b1">点击下载</a>
+        <a href="https://www.123pan.com/s/k4tFTd-OATZh?">点击下载</a>
     </body>
     </div>
     <br>
+</body>
+<body>
+    <h2>XDF-N1常用软件（提取码：npad）</h2>
+    <div class="download-container">
+        <body>
+            <h3>1.学习机软件(双改)</h3>
+            <p>简介：学习机软件(双改)是新东方XDF-N1的原版学习系统，使用他来让刷完机的学习机上课，不能更新，无需验证设备即可登入!</p>
+            <a href="https://www.123pan.com/s/k4tFTd-09TZh?">点击下载</a>
+        </body>
+        <body>
+            <h3>2.学习机软件(原版)</h3>
+            <p>简介：学习机软件(原版)是新东方XDF-N1的原版学习系统，使用他来让刷完机的学习机上课，可以更新，需使用Magisk模块来登入!</p>
+            <a href="https://www.123pan.com/s/k4tFTd-K9TZh?">点击下载</a>
+        </body>
+        <body>
+            <h3>3.Kitsure-Magisk</h3>
+            <p>简介：Kitsure-Magisk(狐妖面具)是一个可以获取设备最高权限，刷写设备底层的工具，通过刷入模块或给予软件最高权限来自定义设备！</p>
+            <a href="https://www.123pan.com/s/k4tFTd-j9TZh?">点击下载</a>
+        </body>
+        <body>
+            <h3>4.华为应用市场</h3>
+            <p>通过华为应用市场来在学习机上安装软件，软件种类丰富，但大部分手游是渠道版，可用edge浏览器安装手游！</p>
+            <a href="https://www.123pan.com/s/k4tFTd-TQTZh?">点击下载</a>
+        </body>
+        <body>
+            <h3>5.Edge浏览器(安卓版)</h3>
+            <p>通过Edge浏览器来在学习机上访问网站，类似于电脑的操作界面，让人很好上手！</p>
+            <a href="https://www.123pan.com/s/k4tFTd-5QTZh">点击下载</a>
+        </body>
+    </div>
 </body>
 <body> <!--赞助-->
     <br>
     <br>
     <br>
-    <h2>如果觉得对您有用，就打赏一点吧！您的支持是我创作的动力！</h2>
+    <h2>如果觉得对您有用，就打赏一点吧！您的支持是我们创作的动力！</h2>
     <br>
-    <img src="/69A8B51E56ED1D9EE96C5CD60FBC2689.png" alt="微信打赏二维码" width="300" height="400">
+    <img src="wechat_pay.png" alt="收款码">
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站制作辅助人员：㍿ 下载站文件：XDFBoom团队</p>
-    <p style="color: darkorchid">技术支持：GitHub & openfrp 宣传支持：CSDN博客 对赞助及支持者鸣谢！</p>
+    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件：XDFBoom团队</p>
+    <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 宣传支持：CSDN博客 对赞助及支持者鸣谢！</p>
 </body>
-<script>
-if (localStorage.getItem('visitCount')) {
-    var count = parseInt(localStorage.getItem('visitCount')) + 1;
-    localStorage.setItem('visitCount', count);
-} else {
-    localStorage.setItem('visitCount', 1);
-}
-var visitCountElement = document.createElement('p');
-visitCountElement.textContent = '本网站个人访问次数：' + localStorage.getItem('visitCount');
-document.body.appendChild(visitCountElement);
-</script>
 
-</html>
+<script>
+    if (localStorage.getItem('visitCount')) {
+        var count = parseInt(localStorage.getItem('visitCount')) + 1;
+        localStorage.setItem('visitCount', count);
+    } else {
+        localStorage.setItem('visitCount', 1);
+    }
+    var visitCountElement = document.createElement('p');
+    visitCountElement.textContent = '本网站个人访问次数：' + localStorage.getItem('visitCount');
+    document.body.appendChild(visitCountElement);
+</script>
